# newsvine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.local.yml  pyproject.toml
analytics/dbt_newsvine/: README.md  dbt_project.yml  profiles.example.yml
docs/: data_dictionary_bigquery.md  local_development_guide.md
docs/adr/: ADR-0001-kafka-topic-design.md  ADR-0002-redis-key-schema.md  ADR-0003-recommendation-scoring-weights.md  ADR-0004-als-hyperparameters.md
docs/demo/: phase6_demo_script.md
docs/openapi/: README.md  openapi.json
docs/runbook/: phase6_operations_runbook.md
frontend/: index.html  nginx.conf  package-lock.json
frontend/src/: App.jsx  AuthContext.jsx  api.js  countries.js  index.css  utils.js
loadtests/: events.js  phase6_full.js  trending.js
local/elasticsearch/: articles-index.json
local/kafka-connect/: Dockerfile
scripts/: backfill_decode_entities.py  backfill_fulltext.py  backfill_images.py  export_openapi.py  reclassify_articles.py  resync_article_images_from_feeds.py
streaming/: spark_als_training_batch.py  spark_article_consumer.py  spark_embedding_refresh_batch.py  spark_profile_updater.py  spark_trending_scorer.py  sparkapplication-als-training.yaml  sparkapplication-article-consumer.yaml  sparkapplication-embedding-refresh.yaml  sparkapplication-profile-updater.yaml  sparkapplication-trending-scorer.yaml
tests/: test_article_schema_unit.py  test_auth_integration.py  test_events_unit.py  test_ingestor_image_extraction.py  test_news_pipeline_integration.py  test_nvidia_kimi_unit.py  test_recommendations_integration.py  test_search_integration.py  test_security_unit.py  test_trending_integration.py  test_users_integration.py
(+83 files in other folders)
